--- a/hf_config_high_quality_english.json
+++ b/hf_config_high_quality_english.json
@@ -1,38 +1,39 @@
 {
-    "seed": 1234,
-    "model_type": "gpt2",
-    "config_name": "gpt2-medium",
-    "tokenizer_name": "./mistral-338m/",
-    "dataset_name": "agentlans/high-quality-english-sentences",
-    "output_dir": "checkpoints-mistral-338m",
-    "overwrite_output_dir": true,
-    "do_train": true,
-    "do_eval": true,
-    "prediction_loss_only": true,
-    "remove_unused_columns": true,
-    "learning_rate": 6.0e-4,
-    "weight_decay": 0.1,
-    "adam_beta2": 0.95,
-    "num_train_epochs": 1,
-    "logging_dir": "checkpoints-mistral-338m/logs",
-    "logging_strategy": "steps",
-    "logging_steps": 100,
-    "eval_strategy": "steps",
-    "save_strategy": "steps",
-    "eval_steps": 5000,
-    "save_steps": 5000,
-    "load_best_model_at_end": true,
-    "save_total_limit": 2,
-    "warmup_steps": 1000,
-    "lr_scheduler_type": "cosine",
-    "per_device_train_batch_size": 4,
-    "per_device_eval_batch_size": 4,
-    "block_size": 1024,
-    "adam_epsilon": 1.0e-4,
-    "fp16": true,
-    "gradient_accumulation_steps": 64,
-    "gradient_checkpointing": false,
-    "push_to_hub": false,
-    "dataloader_num_workers": 7,
-    "torch_compile": false
+  "seed": 1234,
+  "model_type": "mistral",
+  "config_name": "mistral338m",
+  "tokenizer_name": "./mistral-338m/",
+  "dataset_name": "agentlans/high-quality-english-sentences",
+  "output_dir": "checkpoints-mistral-338m",
+  "overwrite_output_dir": true,
+  "do_train": true,
+  "do_eval": true,
+  "prediction_loss_only": true,
+  "remove_unused_columns": true,
+  "learning_rate": 6.0e-4,
+  "weight_decay": 0.1,
+  "adam_beta2": 0.95,
+  "num_train_epochs": 1,
+  "logging_dir": "checkpoints-mistral-338m/logs",
+  "logging_strategy": "steps",
+  "logging_steps": 100,
+  "eval_strategy": "steps",
+  "save_strategy": "steps",
+  "eval_steps": 5000,
+  "save_steps": 5000,
+  "load_best_model_at_end": true,
+  "save_total_limit": 2,
+  "warmup_steps": 1000,
+  "lr_scheduler_type": "cosine",
+  "per_device_train_batch_size": 4,
+  "per_device_eval_batch_size": 4,
+  "block_size": 1024,
+  "adam_epsilon": 1.0e-4,
+  "fp16": true,
+  "gradient_accumulation_steps": 64,
+  "gradient_checkpointing": false,
+  "push_to_hub": false,
+  "dataloader_num_workers": 7,
+  "torch_compile": true,
+  "max_train_samples": 10000
 }
