modify tokenizer config
remove non-ascii characters from training data

--- a/ds_config_zero3.json
+++ b/ds_config_zero3.json
@@ -4,8 +4,8 @@
         "loss_scale": 0.0,
         "loss_scale_window": 1000,
         "initial_scale_power": 16,
-        "hysteresis": 1,
-        "min_loss_scale": 0
+        "hysteresis": 2,
+        "min_loss_scale": 1
     },
     
     "bf16": {
@@ -35,6 +35,8 @@
 
     "zero_optimization": {
         "stage": 3,
+        "allgather_partitions": true,
+        "allgather_bucket_size": 1e8,
         "offload_optimizer": {
             "device": "cpu",
             "pin_memory": true
@@ -45,12 +47,12 @@
         },
         "overlap_comm": true,
         "contiguous_gradients": true,
-        "sub_group_size": 1e9,
-        "reduce_bucket_size": "auto",
-        "stage3_prefetch_bucket_size": "auto",
+        "sub_group_size": 1e8,
+        "reduce_bucket_size": 1e8,
+        "stage3_prefetch_bucket_size": 1e8,
         "stage3_param_persistence_threshold": "auto",
-        "stage3_max_live_parameters": 1e9,
-        "stage3_max_reuse_distance": 1e9,
+        "stage3_max_live_parameters": 1e8,
+        "stage3_max_reuse_distance": 1e8,
         "stage3_gather_16bit_weights_on_model_save": true
     
     },
@@ -63,10 +65,9 @@
       "debug": false
     },
     
-    "gradient_accumulation_steps": "auto",
+    "gradient_accumulation_steps": 16,
     "gradient_clipping": "auto",
-    "train_batch_size": "auto",
+    "train_batch_size": 4,
     "train_micro_batch_size_per_gpu": "auto"
-
- 
 }
+
