--- a/hf_config_CC-MAIN-2023-50.json
+++ b/hf_config_CC-MAIN-2023-50.json
@@ -5,7 +5,9 @@
   "tokenizer_name": "./mistral-338m/",
   "dataset_name": "HuggingFaceFW/fineweb",
   "dataset_config_name": "CC-MAIN-2023-50",
+  "streaming": false,
   "output_dir": "checkpoints-mistral-338m",
+  "resume_from_checkpoint": "checkpoints-mistral-338m",
   "overwrite_output_dir": true,
   "do_train": true,
   "do_eval": true,
@@ -14,7 +16,7 @@
   "learning_rate": 6.0e-4,
   "weight_decay": 0.1,
   "adam_beta2": 0.95,
-  "num_train_epochs": 2,
+  "num_train_epochs": 10,
   "logging_dir": "checkpoints-mistral-338m/logs",
   "logging_strategy": "steps",
   "logging_steps": 100,
@@ -31,7 +33,7 @@
   "block_size": 1024,
   "adam_epsilon": 1.0e-4,
   "fp16": true,
-  "gradient_accumulation_steps": 32,
+  "gradient_accumulation_steps": 16,
   "gradient_checkpointing": false,
   "push_to_hub": false,
   "dataloader_num_workers": 7,
