--- a/hf_config_10B.json
+++ b/hf_config_10B.json
@@ -14,7 +14,7 @@
   "learning_rate": 6.0e-4,
   "weight_decay": 0.1,
   "adam_beta2": 0.95,
-  "num_train_epochs": 2,
+  "num_train_epochs": 10,
   "logging_dir": "checkpoints-mistral-338m/logs",
   "logging_strategy": "steps",
   "logging_steps": 100,
@@ -26,15 +26,14 @@
   "save_total_limit": 2,
   "warmup_steps": 1000,
   "lr_scheduler_type": "cosine",
-  "per_device_train_batch_size": 8,
-  "per_device_eval_batch_size": 8,
+  "per_device_train_batch_size": 4,
+  "per_device_eval_batch_size": 4,
   "block_size": 1024,
   "adam_epsilon": 1.0e-4,
   "fp16": true,
-  "gradient_accumulation_steps": 32,
-  "gradient_checkpointing": false,
+  "gradient_accumulation_steps": 16,
+  "gradient_checkpointing": true,
   "push_to_hub": false,
   "dataloader_num_workers": 7,
-  "torch_compile": true,
-  "max_train_samples": 10000
+  "torch_compile": true
 }
