--- a/hf_config_CC-MAIN-2024-18.json
+++ b/hf_config_CC-MAIN-2024-18.json
@@ -6,6 +6,8 @@
   "dataset_name": "HuggingFaceFW/fineweb",
   "dataset_config_name": "CC-MAIN-2024-18",
   "output_dir": "checkpoints-mistral-338m",
+  "resume_from_checkpoint": "checkpoints-mistral-338m",
+  "overwrite_output_dir": true,
   "do_train": true,
   "do_eval": true,
   "prediction_loss_only": true,
@@ -13,7 +15,7 @@
   "learning_rate": 6.0e-4,
   "weight_decay": 0.1,
   "adam_beta2": 0.95,
-  "num_train_epochs": 2,
+  "num_train_epochs": 10,
   "logging_dir": "checkpoints-mistral-338m/logs",
   "logging_strategy": "steps",
   "logging_steps": 100,
@@ -25,12 +27,12 @@
   "save_total_limit": 2,
   "warmup_steps": 1000,
   "lr_scheduler_type": "cosine",
-  "per_device_train_batch_size": 8,
-  "per_device_eval_batch_size": 8,
+  "per_device_train_batch_size": 4,
+  "per_device_eval_batch_size": 4,
   "block_size": 1024,
   "adam_epsilon": 1.0e-4,
   "fp16": true,
-  "gradient_accumulation_steps": 32,
+  "gradient_accumulation_steps": 16,
   "gradient_checkpointing": false,
   "push_to_hub": false,
   "dataloader_num_workers": 7,
