--- a/hf_config_high_quality_english.json
+++ b/hf_config_high_quality_english.json
@@ -1,9 +1,10 @@
 {
   "seed": 1234,
   "model_type": "mistral",
-  "config_name": "mistral338m",
+  "model_name_or_path": "./mistral-338m/",
   "tokenizer_name": "./mistral-338m/",
   "dataset_name": "agentlans/high-quality-english-sentences",
+  "streaming": false,
   "output_dir": "checkpoints-mistral-338m",
   "overwrite_output_dir": true,
   "do_train": true,
@@ -13,7 +14,7 @@
   "learning_rate": 6.0e-4,
   "weight_decay": 0.1,
   "adam_beta2": 0.95,
-  "num_train_epochs": 1,
+  "num_train_epochs": 10,
   "logging_dir": "checkpoints-mistral-338m/logs",
   "logging_strategy": "steps",
   "logging_steps": 100,
@@ -25,15 +26,14 @@
   "save_total_limit": 2,
   "warmup_steps": 1000,
   "lr_scheduler_type": "cosine",
-  "per_device_train_batch_size": 4,
-  "per_device_eval_batch_size": 4,
+  "per_device_train_batch_size": 8,
+  "per_device_eval_batch_size": 8,
   "block_size": 1024,
   "adam_epsilon": 1.0e-4,
   "fp16": true,
-  "gradient_accumulation_steps": 64,
-  "gradient_checkpointing": false,
+  "gradient_accumulation_steps": 32,
+  "gradient_checkpointing": true,
   "push_to_hub": false,
   "dataloader_num_workers": 7,
-  "torch_compile": true,
-  "max_train_samples": 10000
+  "torch_compile": true
 }
