use gemma3 settings

--- a/hf_config_10B.json
+++ b/hf_config_10B.json
@@ -1,11 +1,11 @@
 {
   "seed": 1234,
-  "model_type": "mistral",
-  "model_name_or_path": "./mistral-338m/",
-  "tokenizer_name": "./mistral-338m/",
+  "model_type": "gemma3_text",
+  "model_name_or_path": "./gemma3-270m/",
+  "tokenizer_name": "./gemma3-270m/",
   "dataset_name": "HuggingFaceFW/fineweb",
   "dataset_config_name": "sample-10BT",
-  "output_dir": "checkpoints-mistral-338m",
+  "output_dir": "checkpoints-gemma3-270m",
   "overwrite_output_dir": true,
   "do_train": true,
   "do_eval": true,
@@ -14,8 +14,8 @@
   "learning_rate": 6.0e-4,
   "weight_decay": 0.1,
   "adam_beta2": 0.95,
-  "num_train_epochs": 10,
-  "logging_dir": "checkpoints-mistral-338m/logs",
+  "num_train_epochs": 1,
+  "logging_dir": "checkpoints-gemma3-270m/logs",
   "logging_strategy": "steps",
   "logging_steps": 100,
   "eval_strategy": "steps",
@@ -26,8 +26,8 @@
   "save_total_limit": 2,
   "warmup_steps": 1000,
   "lr_scheduler_type": "cosine",
-  "per_device_train_batch_size": 4,
-  "per_device_eval_batch_size": 4,
+  "per_device_train_batch_size": 16,
+  "per_device_eval_batch_size": 16,
   "block_size": 1024,
   "adam_epsilon": 1.0e-4,
   "fp16": true,
