--- a/hf_config_CC-MAIN-2023-50.json
+++ b/hf_config_CC-MAIN-2023-50.json
@@ -1,14 +1,13 @@
 {
   "seed": 1234,
-  "model_type": "mistral",
-  "model_name_or_path": "./mistral-338m/",
-  "tokenizer_name": "./mistral-338m/",
+  "model_type": "gemma3_text",
+  "model_name_or_path": "./gemma3-270m/",
+  "tokenizer_name": "./gemma3-270m/",
   "dataset_name": "HuggingFaceFW/fineweb",
   "dataset_config_name": "CC-MAIN-2023-50",
   "streaming": false,
-  "output_dir": "checkpoints-mistral-338m",
-  "resume_from_checkpoint": "checkpoints-mistral-338m",
-  "overwrite_output_dir": true,
+  "output_dir": "checkpoints-gemma3-270m",
+  "overwrite_output_dir": false,
   "do_train": true,
   "do_eval": true,
   "prediction_loss_only": true,
@@ -16,25 +15,25 @@
   "learning_rate": 6.0e-4,
   "weight_decay": 0.1,
   "adam_beta2": 0.95,
-  "num_train_epochs": 10,
-  "logging_dir": "checkpoints-mistral-338m/logs",
+  "num_train_epochs": 1,
+  "logging_dir": "checkpoints-gemma3-270m/logs",
   "logging_strategy": "steps",
   "logging_steps": 100,
   "eval_strategy": "steps",
   "save_strategy": "steps",
-  "eval_steps": 5000,
-  "save_steps": 5000,
+  "eval_steps": 2000,
+  "save_steps": 2000,
   "load_best_model_at_end": true,
-  "save_total_limit": 2,
+  "save_total_limit": 4,
   "warmup_steps": 1000,
   "lr_scheduler_type": "cosine",
-  "per_device_train_batch_size": 8,
-  "per_device_eval_batch_size": 8,
+  "per_device_train_batch_size": 16,
+  "per_device_eval_batch_size": 16,
   "block_size": 1024,
   "adam_epsilon": 1.0e-4,
   "fp16": true,
   "gradient_accumulation_steps": 16,
-  "gradient_checkpointing": false,
+  "gradient_checkpointing": true,
   "push_to_hub": false,
   "dataloader_num_workers": 7,
   "torch_compile": true
