--- a/hf_config_fim_stack_cpp.json
+++ b/hf_config_fim_stack_cpp.json
@@ -15,25 +15,25 @@
   "learning_rate": 6.0e-4,
   "weight_decay": 0.1,
   "adam_beta2": 0.95,
-  "num_train_epochs": 10,
+  "num_train_epochs": 2,
   "logging_dir": "checkpoints-mistral-338m/logs",
   "logging_strategy": "steps",
   "logging_steps": 100,
   "eval_strategy": "steps",
   "save_strategy": "steps",
-  "eval_steps": 5000,
-  "save_steps": 5000,
+  "eval_steps": 2000,
+  "save_steps": 2000,
   "load_best_model_at_end": true,
-  "save_total_limit": 2,
+  "save_total_limit": 4,
   "warmup_steps": 1000,
   "lr_scheduler_type": "cosine",
-  "per_device_train_batch_size": 4,
-  "per_device_eval_batch_size": 4,
+  "per_device_train_batch_size": 8,
+  "per_device_eval_batch_size": 8,
   "block_size": 1024,
   "adam_epsilon": 1.0e-4,
   "fp16": true,
-  "gradient_accumulation_steps": 16,
-  "gradient_checkpointing": false,
+  "gradient_accumulation_steps": 32,
+  "gradient_checkpointing": true,
   "push_to_hub": false,
   "dataloader_num_workers": 7,
   "torch_compile": true,
