--- a/tokenizer/tokenizer_config.json
+++ b/tokenizer/tokenizer_config.json
@@ -2131,10 +2131,6 @@
   },
   "clean_up_tokenization_spaces": false,
   "extra_special_tokens": {},
-  "model_max_length": 8192,
-  "tokenizer_class": "PreTrainedTokenizer",
-  "bos_token": "<s>",
-  "eos_token": "</s>",
-  "pad_token": "<pad>",
-  "unk_token": "<unk>"
+  "model_max_length": 1000000000000000019884624838656,
+  "tokenizer_class": "PreTrainedTokenizer"
 }
