--- a/gemma3-270m/config.json
+++ b/gemma3-270m/config.json
@@ -6,9 +6,8 @@
   "attention_bias": false,
   "attention_dropout": 0.0,
   "attn_logit_softcapping": null,
-  "bos_token_id": 1,
-  "eos_token_id": 2,
-  "pad_token_id": 3,
+  "bos_token_id": 2,
+  "eos_token_id": 1,
   "final_logit_softcapping": null,
   "head_dim": 256,
   "hidden_activation": "gelu_pytorch_tanh",
@@ -40,6 +39,7 @@
   "num_attention_heads": 4,
   "num_hidden_layers": 18,
   "num_key_value_heads": 1,
+  "pad_token_id": 0,
   "query_pre_attn_scalar": 256,
   "rms_norm_eps": 1e-06,
   "rope_local_base_freq": 10000.0,
@@ -47,8 +47,8 @@
   "rope_theta": 1000000.0,
   "sliding_window": 512,
   "torch_dtype": "bfloat16",
-  "transformers_version": "4.52.4",
+  "transformers_version": "4.55.0.dev0",
   "use_bidirectional_attention": false,
   "use_cache": true,
   "vocab_size": 32000
-}
+}
