--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
+wheel
 datasets
 transformers
 deepspeed
 evaluate
-accelerate
+accelerate>=0.26.0
 scikit-learn
-wheel
 bitsandbytes
+packaging
 flash_attn
+datasets
+evaluate
 tensorboard
+huggingface_hub[cli]
+scikit-learn
