--- a/mistral-338m/config.json
+++ b/mistral-338m/config.json
@@ -8,17 +8,17 @@
     "hidden_act": "silu",
     "hidden_size": 1024,
     "initializer_range": 0.02,
-    "intermediate_size": 2400,
-    "max_position_embeddings": 8192,
+    "intermediate_size": 2048,
+    "max_position_embeddings": 32768,
     "model_type": "mistral",
     "num_attention_heads": 16,
-    "num_hidden_layers": 24,
-    "num_key_value_heads": 8,
+    "num_hidden_layers": 30,
+    "num_key_value_heads": 4,
     "rms_norm_eps": 1e-06,
     "rope_theta": 10000.0,
-    "sliding_window": 1024,
+    "sliding_window": null,
     "tie_word_embeddings": false,
-    "torch_dtype": "float16",
+    "torch_dtype": "bfloat16",
     "transformers_version": "4.52.4",
     "use_cache": true,
     "vocab_size": 32000
