--- a/gemma3-300m/config.json
+++ b/gemma3-300m/config.json
@@ -33,12 +33,18 @@
     "sliding_attention",
     "sliding_attention",
     "sliding_attention",
+    "full_attention",
+    "sliding_attention",
+    "sliding_attention",
+    "sliding_attention",
+    "sliding_attention",
+    "sliding_attention",
     "full_attention"
   ],
   "max_position_embeddings": 32768,
   "model_type": "gemma3_text",
   "num_attention_heads": 4,
-  "num_hidden_layers": 18,
+  "num_hidden_layers": 30,
   "num_key_value_heads": 1,
   "query_pre_attn_scalar": 256,
   "rms_norm_eps": 1e-06,
@@ -47,7 +53,7 @@
   "rope_theta": 1000000.0,
   "sliding_window": 512,
   "torch_dtype": "bfloat16",
-  "transformers_version": "4.55.0.dev0",
+  "transformers_version": "4.55.4",
   "use_bidirectional_attention": false,
   "use_cache": true,
   "vocab_size": 32000
