--- a/gemma3-246m/config.json
+++ b/gemma3-246m/config.json
@@ -12,7 +12,7 @@
   "final_logit_softcapping": null,
   "head_dim": 256,
   "hidden_activation": "gelu_pytorch_tanh",
-  "hidden_size": 640,
+  "hidden_size": 880,
   "initializer_range": 0.02,
   "intermediate_size": 2048,
   "layer_types": [
@@ -39,9 +39,15 @@
     "sliding_attention",
     "sliding_attention",
     "sliding_attention",
+    "full_attention",
+    "sliding_attention",
+    "sliding_attention",
+    "sliding_attention",
+    "sliding_attention",
+    "sliding_attention",
     "full_attention"
   ],
-  "max_position_embeddings": 32768,
+  "max_position_embeddings": 65536,
   "model_type": "gemma3_text",
   "num_attention_heads": 4,
   "num_hidden_layers": 30,
