--- a/hf_config_high_quality_english.json
+++ b/hf_config_high_quality_english.json
@@ -1,12 +1,12 @@
 {
   "seed": 1234,
   "model_type": "gemma3_text",
-  "model_name_or_path": "./gemma3-270m/",
-  "tokenizer_name": "./gemma3-270m/",
+  "model_name_or_path": "./gemma3-300m/",
+  "tokenizer_name": "./gemma3-300m/",
   "dataset_name": "agentlans/high-quality-english-sentences",
   "streaming": false,
-  "output_dir": "checkpoints-gemma3-270m",
-  "overwrite_output_dir": true,
+  "output_dir": "checkpoints-gemma3-300m",
+  "overwrite_output_dir": false,
   "do_train": true,
   "do_eval": true,
   "prediction_loss_only": true,
@@ -15,7 +15,7 @@
   "weight_decay": 0.1,
   "adam_beta2": 0.95,
   "num_train_epochs": 10,
-  "logging_dir": "checkpoints-gemma3-270m/logs",
+  "logging_dir": "checkpoints-gemma3-300m/logs",
   "logging_strategy": "steps",
   "logging_steps": 100,
   "eval_strategy": "steps",
@@ -30,7 +30,7 @@
   "per_device_eval_batch_size": 8,
   "block_size": 1024,
   "adam_epsilon": 1.0e-4,
-  "fp16": true,
+  "fp16": false,
   "gradient_accumulation_steps": 32,
   "gradient_checkpointing": false,
   "push_to_hub": false,
