--- a/hf_config_CC-MAIN-2023-50.json
+++ b/hf_config_CC-MAIN-2023-50.json
@@ -1,12 +1,12 @@
 {
   "seed": 1234,
   "model_type": "gemma3_text",
-  "model_name_or_path": "./gemma3-270m/",
-  "tokenizer_name": "./gemma3-270m/",
+  "model_name_or_path": "./gemma3-246m/",
+  "tokenizer_name": "./gemma3-246m/",
   "dataset_name": "HuggingFaceFW/fineweb",
   "dataset_config_name": "CC-MAIN-2023-50",
   "streaming": false,
-  "output_dir": "checkpoints-gemma3-270m",
+  "output_dir": "checkpoints-gemma3-246m",
   "overwrite_output_dir": false,
   "do_train": true,
   "do_eval": true,
@@ -16,7 +16,7 @@
   "weight_decay": 0.1,
   "adam_beta2": 0.95,
   "num_train_epochs": 1,
-  "logging_dir": "checkpoints-gemma3-270m/logs",
+  "logging_dir": "checkpoints-gemma3-246m/logs",
   "logging_strategy": "steps",
   "logging_steps": 100,
   "eval_strategy": "steps",
@@ -27,14 +27,15 @@
   "save_total_limit": 4,
   "warmup_steps": 1000,
   "lr_scheduler_type": "cosine",
-  "per_device_train_batch_size": 16,
-  "per_device_eval_batch_size": 16,
+  "per_device_train_batch_size": 8,
+  "per_device_eval_batch_size": 8,
   "block_size": 1024,
   "adam_epsilon": 1.0e-4,
-  "fp16": true,
-  "gradient_accumulation_steps": 16,
-  "gradient_checkpointing": true,
+  "fp16": false,
+  "gradient_accumulation_steps": 64,
+  "gradient_checkpointing": false,
   "push_to_hub": false,
   "dataloader_num_workers": 7,
-  "torch_compile": true
+  "torch_compile": true,
+  "attn_implementation": "eager"
 }
