--- a/tokenizer/tokenizer_config.json
+++ b/tokenizer/tokenizer_config.json
@@ -2132,5 +2132,5 @@
   "clean_up_tokenization_spaces": false,
   "extra_special_tokens": {},
   "model_max_length": 1000000000000000019884624838656,
-  "tokenizer_class": "PreTrainedTokenizer"
+  "tokenizer_class": "PreTrainedTokenizerFast"
 }
